crates/core/tests/proc/fn/forbidden_param.stderr
error: Using the name 'new' can cause conflicts in generated code.
 --> tests/proc/fn/forbidden_param.rs:5:8
  |
5 | fn foo(new: u8) {}
  |        ^^^
