crates/core/tests/proc/fn/forbidden_param.rs
use interoptopus::ffi_function;

#[ffi_function]
#[allow(unused_variables)]
fn foo(new: u8) {}

fn main() {}
